2007-02-23  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-perl-data.c, lib/Foomatic/DB.pm: Allow specifying
	  manufacturer names along with the "<manufacturersupplied>" tag
	  in the driver XML file. In this case in the PPDs and in the PPD
	  lists the driver is only marked as supplied by the manufacturer
	  if the printer manufacturer's name matches one of the given
	  names. For example if a Brother printer is used with HPIJS, the
	  driver is not considered manufacturer-suppiled.

2007-02-22  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-combo-xml.c, foomatic-perl-data.c, lib/Foomatic/DB.pm: 
	  Let new driver data fields go into the generated PPD files and
	  into the oberview output. To get this information into the PPD
	  lists of CUPS 1.2.x when using on-the-fly PPD generation added
	  a new "DRV:" field to the device ID which contains all the
	  driver functionality information.

2007-02-21  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-combo-xml.c, foomatic-perl-data.c: Added support for
	  new data fields in the driver XML files. These data fields
	  should describe the properties of the drivers in a better way to
	  guide the user to find the best driver for his personal needs
	  and also make printer setup tools clearly informing the user
	  before downloading and installing a driver which is not part of
	  the distribution.

2007-02-07  Till Kamppeter <till.kamppeter@gmail.com>

	* Foomatic-Devel-Ideas.txt, README, debian/README.Debian,
	  debian/control, foomatic-filters-ppds-README, lib/Foomatic/DB.pm:
	  Replaced "FSG OpenPrinting" by "OpenPrinting".

2007-02-06  Till Kamppeter <till.kamppeter@gmail.com>

	* foomatic-perl-data.c: Added support for more driver types:
	  CUPS Raster, IJS, and OpenPrinting Vector.

2007-01-06  Till Kamppeter <till.kamppeter@gmail.com>

	* README, USAGE, README.build-foomatic-filters-ppds,
	  foomatic-addpjloptions.8.in, foomatic-combo-xml.1.in,